Fix screenshot alignment.

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -103,7 +103,7 @@ header h1 a {
   width: 400px;
 }
 #home-page section .omega .screenshot {
-  margin-left: 45px;
+  margin-left: 58px;
 }
 #home-page #permissions-screenshot {
   background: #fff url(/images/permissions.png) no-repeat center;
